--- a/app/src/main/res/layout/tile_movie.xml
+++ b/app/src/main/res/layout/tile_movie.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        android:gravity="center_horizontal"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/imageMovieEditMenu"
         app:layout_constraintStart_toStartOf="parent"
