feat(manage_movies): added redirection for adding movies and editing movies by filling in the fields.

--- a/app/src/main/res/navigation/movies_manager_graph.xml
+++ b/app/src/main/res/navigation/movies_manager_graph.xml
@@ -18,5 +18,11 @@
         android:id="@+id/movieManagerFragment"
         android:name="com.luisitolentino.moviesmanager.presentation.view.fragment.MovieManagerFragment"
         android:label="fragment_movie_manager"
-        tools:layout="@layout/fragment_movie_manager" />
+        tools:layout="@layout/fragment_movie_manager">
+        <argument
+            android:name="movie"
+            android:defaultValue="@null"
+            app:argType="com.luisitolentino.moviesmanager.domain.model.Movie"
+            app:nullable="true" />
+    </fragment>
 </navigation>
