--- a/app/src/main/res/layout/fragment_movie_manager.xml
+++ b/app/src/main/res/layout/fragment_movie_manager.xml
@@ -106,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@id/checkMovieWatched" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonAddMovie"
+        android:id="@+id/buttonSaveMovie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
