feat(add_movie): added persistence in the database.

--- a/app/src/main/res/navigation/movies_manager_graph.xml
+++ b/app/src/main/res/navigation/movies_manager_graph.xml
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/movieManagerFragment"
         android:name="com.luisitolentino.moviesmanager.presentation.view.fragment.MovieManagerFragment"
-        android:label="fragment_movie_manager"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_movie_manager">
         <argument
             android:name="movie"
