--- a/app/src/main/res/navigation/movies_manager_graph.xml
+++ b/app/src/main/res/navigation/movies_manager_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/go_to_movieManagerFragment"
             app:destination="@id/movieManagerFragment" />
+        <action
+            android:id="@+id/go_to_detailMovieFragment"
+            app:destination="@id/detailMovieFragment" />
     </fragment>
     <fragment
         android:id="@+id/movieManagerFragment"
@@ -24,5 +27,15 @@
             android:defaultValue="@null"
             app:argType="com.luisitolentino.moviesmanager.domain.model.Movie"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailMovieFragment"
+        android:name="com.luisitolentino.moviesmanager.presentation.view.fragment.DetailMovieFragment"
+        android:label="fragment_detail_filme"
+        tools:layout="@layout/fragment_detail_movie">
+        <argument
+            android:name="selectedMovie"
+            app:argType="com.luisitolentino.moviesmanager.domain.model.Movie"
+            app:nullable="false" />
     </fragment>
 </navigation>
