--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -8,80 +9,140 @@
     android:paddingHorizontal="16dp">
 
     <TextView
-        android:id="@+id/textMovieName"
+        android:id="@+id/textMovieNameLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:hint="@string/label_movie_name"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textMovieName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMovieNameLabel"
+        tools:text="@string/label_movie_name" />
+
+    <TextView
         android:id="@+id/textMovieGenreLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/label_movie_genre"
-        android:textSize="18sp"
+        android:layout_marginTop="24dp"
+        android:hint="@string/label_movie_genre"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textMovieName" />
 
     <TextView
-        android:id="@+id/textMovieStudio"
+        android:id="@+id/textMovieGenre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/label_movie_studio"
+        android:layout_marginTop="4dp"
+        android:text="@string/label_movie_genre"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textMovieGenreLabel" />
 
     <TextView
+        android:id="@+id/textMovieStudioLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:hint="@string/label_movie_studio"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMovieGenre" />
+
+    <TextView
+        android:id="@+id/textMovieStudio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/label_movie_studio"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMovieStudioLabel" />
+
+    <TextView
+        android:id="@+id/textReleaseYearLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:hint="@string/label_release_year"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/textMovieDurationLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMovieStudio" />
+
+    <TextView
         android:id="@+id/textReleaseYear"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:hint="@string/label_release_year"
+        android:text="@string/label_release_year"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/textMovieDuration"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textReleaseYearLabel" />
+
+    <TextView
+        android:id="@+id/textMovieDurationLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:hint="@string/label_movie_duration_in_minutes"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textReleaseYearLabel"
         app:layout_constraintTop_toBottomOf="@id/textMovieStudio" />
+
 
     <TextView
         android:id="@+id/textMovieDuration"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:hint="@string/label_movie_duration"
+        android:layout_marginTop="4dp"
+        android:text="@string/label_movie_duration"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textReleaseYear"
-        app:layout_constraintTop_toBottomOf="@id/textMovieStudio" />
+        app:layout_constraintTop_toBottomOf="@id/textMovieDurationLabel" />
+
 
     <TextView
         android:id="@+id/textMovieWatched"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/label_watched"
+        android:layout_marginTop="24dp"
+        android:text="@string/label_movie_watched"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textMovieDuration" />
+        app:layout_constraintTop_toBottomOf="@id/textReleaseYear" />
 
     <TextView
         android:id="@+id/textMovieScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:hint="@string/label_movie_score"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/label_movie_score"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textMovieWatched" />
+        app:layout_constraintStart_toEndOf="@id/textMovieWatched"
+        app:layout_constraintTop_toBottomOf="@id/textReleaseYear" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
