--- a/app/src/main/res/layout/fragment_movie_manager.xml
+++ b/app/src/main/res/layout/fragment_movie_manager.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textMovieGenreLabel"
+        android:id="@+id/textMovieGenre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textMovieGenreLabel" />
+        app:layout_constraintTop_toBottomOf="@id/textMovieGenre" />
 
     <EditText
         android:id="@+id/editTextMovieStudio"
